--- a/a.css
+++ b/a.css
@@ -120,6 +120,6 @@
 }
 
 html {
-    height: 100%;
-    /* -webkit-overflow-scrolling: touch; */
+    /* height: 100%; */
+    -webkit-overflow-scrolling: touch;
 }
