--- a/a.css
+++ b/a.css
@@ -119,6 +119,12 @@
     color: var(--cp-color-1);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
 html {
     height: 100%;
     -webkit-overflow-scrolling: touch;
